--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>Conway's Game of Life</title>
 </head>
 <body>
-    <canvas></canvas>
+
+    <h1 align="center">Conway's Game of Life</h1>
+
+    <div align="center">
+        <button id="start">Start Game</button>
+        <button id="stop">End Game</button>
+        <button id="random">Random</button>
+    </div>
+    <br/>
+
+    <div align="center">
+        <canvas></canvas>
+    </div>
+    
+
+
     <script src="index.js"></script>
+
+    <script>
+
+
+
+    </script>
 </body>
 </html>
