Added generation iterator button
Changed Random to Next Generation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div align="center">
         <button id="start">Start Game</button>
         <button id="stop">End Game</button>
-        <button id="random">Random</button>
+        <button id="nextGen">Next Generation</button>
     </div>
     <br/>
 
