--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div align="center">
         <button id="start">Start Game</button>
         <button id="stop">End Game</button>
-        <button id="random">Random</button>
+        <button id="nextGen">Next Generation</button>
+        <button id="nexGen">23 Generations</button>
     </div>
     <br/>
 
