--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1 align="center">Conway's Game of Life</h1>
 
     <div align="center">
-        <button id="start">Start Game</button>
-        <button id="stop">End Game</button>
-        <button id="random">Random</button>
+        <button class="start" id="start">Start Game</button>
+        <button class="stop" id="stop">End Game</button>
+        <button class="random" id="random">Random</button>
     </div>
     <br/>
 
@@ -21,8 +21,6 @@
         <canvas></canvas>
     </div>
     
-
-
     <script src="index.js"></script>
 
     <script>
