--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <div align="center">
         <canvas></canvas>
     </div>
+
+    <div align="center">
+        <h2>Board Size</h2>
+        <button id="small">Small</button>
+        <button id="medium">Medium</button>
+        <button id="large">Large</button>
+
+    </div>
     
     <script src="index.js"></script>
 
