--- a/index.html
+++ b/index.html
@@ -4,39 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Conway's Game of Life</title>
 </head>
 <body>
 
-    <h1 align="center">Conway's Game of Life</h1>
+<h1 align="center">Conway's Game of Life</h1>
 
-    <div align="center">
-        <button id="start">Start Game</button>
-        <button id="stop">End Game</button>
-        <button id="nextGen">Next Generation</button>
-        <button id="nexGen">23 Generations</button>
-        <button id="random">Random</button>
-    </div>
-    <br/>
+<div align="center">
+    <button id="start">Start Game</button>
+    <button id="stop">End Game</button>
+    <button id="nextGen">Next Generation</button>
+    <button id="nexGen">23 Generations</button>
+    <a href='https://www.index.html'><button>Reset</button></a>
+    <button id="random">Random</button>
+</div>
+<br/>
 
-    <div align="center">
-        <canvas></canvas>
-    </div>
+<div align="center">
+    <canvas></canvas>
+</div>
 
-    <div align="center">
-        <h2>Board Size</h2>
-        <button id="small">Small</button>
-        <button id="medium">Medium</button>
-        <button id="large">Large</button>
+<script src="index.js"></script>
 
-    </div>
-    
-    <script src="index.js"></script>
-
-    <script>
+<script>
 
 
 
-    </script>
+</script>
 </body>
 </html>
