added buttons for summary.html and title.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Conway's Game of Life</title>
 </head>
 <body>
+    
+<div align="left">
+    <a href='https://webprogrammingteam3.github.io/Project3/summary.html'><button>Summary</button></a>
+    <a href='https://webprogrammingteam3.github.io/Project3/title.html'><button>How To Play</button></a>
+</div>
 
 <h1 align="center">Conway's Game of Life</h1>
 
