--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button id="stop">End Game</button>
     <button id="nextGen">Next Generation</button>
     <button id="nexGen">23 Generations</button>
-    <a href='https://www.index.html'><button>Reset</button></a>
+    <a href='https://webprogrammingteam3.github.io/Project3/'><button>Reset</button></a>
     <button id="random">Random</button>
 </div>
 <br/>
