forgot to add small, medium, large buttons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <div align="center">
     <canvas></canvas>
 </div>
+<div align="center">
+    <button id="small">Small</button>
+    <button id="medium">Medium</button>
+    <button id="large">Large</button>
+</div>
 
 <script src="index.js"></script>
 
