added links to the bottom (they all work)

--- a/title.html
+++ b/title.html
@@ -54,9 +54,9 @@
 <div class = "bottom">
     Contributors: Ryan Salter, Michael Hosein, Tomy Tran, Derek Yong
     <p> Resources: <a href="https://www.youtube.com/watch?v=deXzu0Eregs">https://www.youtube.com/watch?v=deXzu0Eregs</a> <a href="https://levelup.gitconnected.com/conways-game-of-life-in-javascript-9498ae1958fe">https://levelup.gitconnected.com/conways-game-of-life-in-javascript-9498ae1958fe</a> </p>
-    <p> Summary: <a href=""></a></p>
-    <p> Github: <a href=""></a> </p>
-    <p> Youtube: <a href=""></a></p>
+    <p> <a href="https://webprogrammingteam3.github.io/Project3/summary.html"><button>Summary</button></a></p>
+    <p> <a href="https://github.com/WebProgrammingTeam3/Project3"><button>Github</button></a> </p>
+    <p> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>YouTube</button></a></p>
 </div>
 <form action="https://index.html">
     <input type="submit" value="Start" />
