added button to return to game

--- a/summary.html
+++ b/summary.html
@@ -16,6 +16,10 @@
         Even though option 2 was an easier task than option 1, Conways game of life still proved to be a challenge. Some of the difficulties we faced was getting some of the buttons to work such as the start button, end button,
         and the reset button. We used outside resources to help create the board and have some of the game mechanics to work which helped us a lot in the creation process. </p>
 </div>
+    
+<div class = "bottom">
+    <p> <a href="https://webprogrammingteam3.github.io/Project3/"><button>Return To Game</button></a></p>
+</div>
 
 </body>
 </html>
