--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <button id="medium">Medium</button>
     <button id="large">Large</button>
 </div>
+<div align="center">
+    <button id="checkered">Checkered</button>
+    <button id="lines">Lines</button>
+    <button id="other">Other</button>
+</div>
 
 <script src="index.js"></script>
 
