--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     <button id="medium">Medium</button>
     <button id="large">Large</button>
 </div>
+
 <div align="center">
-    <button id="checkered">Checkered</button>
-    <button id="lines">Lines</button>
-    <button id="other">Other</button>
+    <button id="glider">Glider</button>
+    <button id="pulsar"> Pulsar</button>
+    <button id="block">Block</button>
 </div>
 
 <script src="index.js"></script>
